--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
       
       - uses: superfly/flyctl-actions/setup-flyctl@master
       
-      - run: flyctl deploy --remote-only --app aditya-m
+      - run: flyctl deploy --remote-only --app adityam
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }} 
